style changes, overflow-y, footer fix

--- a/app/main.css
+++ b/app/main.css
@@ -1,3 +1,25 @@
+html, 
+body {
+    overflow-x: none;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+
+#wrapper {
+	min-height:100%;
+	position:relative;
+}
+
+#content {
+    padding-bottom: 20px;
+}
+
+.maincontainer {
+    margin: 0 auto;
+    overflow-y: auto;
+}
 
 input[type=number]::-webkit-outer-spin-button,
 input[type=number]::-webkit-inner-spin-button {
@@ -17,21 +39,14 @@ input {
     text-align: center;
 }
 
-.maincontainer {
-    margin: 0 auto;
-}
-
-body {
-    overflow-x: none;
-}
-
 /*footer*/
 
 #footer {
     position: absolute;
     width: 100%;
     height: 20px;
-    bottom:0;
+    bottom: 0;
+    left: 0;
     text-align: center;
 }
 
